# tooling

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  issue_bug_template.md  issue_correction_template.md
.github/workflows/: api-review-reusable.yml  pr_validation.yml  project-admin-bulk-repository-changes.yml  project-admin-repository-worker.yml  project-admin-single-repo-test.yml  regression-runner.yml  release-automation-regression.yml  release-automation-reusable.yml  release-info-reusable.yml  release-info-trigger.yml  spectral-oas.yml  update-floating-tag.yml  validation-regression.yml  validation-settings-ci.yml  validation.yml
api-review/docs/: CAMARA_API_Review_Workflow_Usage_Guide.md  ReleaseInfoTemplate-2.md
api-review/workflows/: api-review-trigger.yml
config/: validation-settings.yaml
linting/config/: .gherkin-lintrc  .spectral-r3.4.yaml  .spectral-r4.yaml  .spectral.yaml
linting/docs/: Reusable Workflows.md
linting/workflows/: pr_validation_caller.yml  spectral-oas-caller.yml
release_automation/: __init__.py
release_automation/config/: transformations.yaml
release_automation/docs/: api-readiness-checklist.md  branching-model.md  repository-setup.md  technical-architecture.md
release_automation/regression/: expected-comments.yaml
release_automation/scripts/: __init__.py  bot_context.py  bot_responder.py  changelog_generator.py  config.py  context_builder.py  git_operations.py  github_client.py  issue_manager.py  issue_sync.py  mechanical_transformer.py  metadata_generator.py  post_release_syncer.py  readme_updater.py  regression_runner.py  release_publisher.py  snapshot_creator.py  state_manager.py  template_loader.py  version_calculator.py  wip_checker.py  workflow_context.py
release_automation/tests/: __init__.py  test_bot_context.py  test_bot_responder.py  test_changelog_generator.py  test_git_operations.py  test_github_client.py  test_issue_manager.py  test_issue_sync.py  test_mechanical_transformer.py  test_metadata_generator.py  test_post_release_syncer.py  (+9 more)
scripts/: api_review_validator_v0_6.py  manual-api-downloads.sh  run-test-validators.sh
scripts/camara-validator/: CONTRIBUTING.md  README.md  pyproject.toml
scripts/camara-validator/src/camara_validator/: __init__.py  __version__.py  cli.py  models.py
scripts/camara-validator/src/camara_validator/config/: v0_6.py
scripts/camara-validator/src/camara_validator/loaders/: base.py  yaml_loader.py
scripts/camara-validator/src/camara_validator/reporting/: github.py  markdown.py
scripts/camara-validator/src/camara_validator/rules/: registry.py
scripts/camara-validator/tests/: __init__.py  validation-rules-discovered.md
scripts/camara-validator/tests/fixtures/edge-cases/: subscription-api.yaml
test-data/: README.md
tooling_lib/: __init__.py  cache_sync.py
validation/: __init__.py  orchestrator.py  package-lock.json  package.json
(+153 files in other folders)
